# cs-kaoyan-predictor

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  cli.py  framework.py
src/data/: __init__.py  crawler.py  schools.py
tests/: test_framework.py
